added book sites

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📚 Interactive Book Search</h1>
+            <h1>Book Search</h1>
             <p>Find your favorite books across multiple platforms</p>
         </header>
 
@@ -50,12 +50,9 @@
                     <div class="select-wrapper">
                         <select id="site" name="site">
                             <option value="">Choose a platform...</option>
-                            <option value="amazon">🛒 Amazon</option>
-                            <option value="goodreads">⭐ Goodreads</option>
-                            <option value="library">📚 Library</option>
-                            <option value="bookdepository">🌍 Book Depository</option>
-                            <option value="openlibrary">🔓 Open Library</option>
-                            <option value="barnesandnoble">📖 Barnes & Noble</option>
+                            <option value="openlibrary">Open Library</option>
+                            <option value="barnesandnoble">Barnes & Noble</option>
+                            <option value="thriftbooks">ThriftBook</option>
                         </select>
                     </div>
                 </div>
